--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -6,7 +6,13 @@
     "start": "ng serve -o --port 4401",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:href": "ng build --base-href ./",
+    "delete:docs": "del docs",
+    "copy:disc": "copyfiles dist/bases/browser/* ./docs -f",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:disc"
+
+
   },
   "private": true,
   "dependencies": {
@@ -29,6 +35,8 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^9.0.8",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
